syntax = "proto3";

option csharp_namespace = "JwtSample";

package greet;

// The greeting service definition.
service Greeter {

  rpc GetToken (GetTokenRequest) returns (GetTokenReply);

  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc SayHelloStream (HelloRequest) returns (stream HelloReply);

  rpc StreamSayHello (stream HelloRequest) returns (HelloReply);

  rpc BidirectionalSayHello (stream HelloRequest) returns (stream HelloReply);
}

message GetTokenRequest {
	string account = 1;
	string password = 2;
}

message GetTokenReply {
	string token = 1;
	int64 expire = 2;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
